--- a/css/styles.css
+++ b/css/styles.css
@@ -640,3 +640,31 @@ img {
 .icon-cross {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.form {
+  display: flex;
+  flex-direction: column;
+  margin-top: 16px;
+  margin-left: 24px;
+  margin-right: 24px;
+  gap: 8px;
+}
+.form-label {
+  display: flex;
+  flex-direction: column;
+  color: #8e8f99;
+  font-size: 12px;
+  gap: 4px;
+}
+.form-heading {
+  margin-top: 76px;
+  margin-left: 24px;
+  margin-right: 24px;
+  width: 360px;
+  text-align: center;
+  font-size: 16px;
+}
+.form-input {
+  max-width: 360px;
+  border: 1px solid #2e2f4266;
+  border-radius: 4px;
+}
