--- a/css/styles.css
+++ b/css/styles.css
@@ -613,6 +613,7 @@ img {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 72px 24px 24px 24px;
 }
 .button-close-window {
   position: absolute;
@@ -643,28 +644,71 @@ img {
 .form {
   display: flex;
   flex-direction: column;
-  margin-top: 16px;
-  margin-left: 24px;
-  margin-right: 24px;
   gap: 8px;
 }
 .form-label {
-  display: flex;
-  flex-direction: column;
   color: #8e8f99;
   font-size: 12px;
-  gap: 4px;
+  margin-bottom: 4px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  display: block;
 }
 .form-heading {
-  margin-top: 76px;
-  margin-left: 24px;
-  margin-right: 24px;
   width: 360px;
   text-align: center;
   font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  margin-bottom: 16px;
 }
 .form-input {
-  max-width: 360px;
-  border: 1px solid #2e2f4266;
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
+  background-color: transparent;
+  padding-left: 38px;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-input:focus {
+  border-color: #4d5ae5;
+  fill: #4d5ae5;
+}
+.form-box {
+  margin-bottom: 8px;
+}
+.input-box {
+  position: relative;
+}
+.icon-form {
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-comment {
+  margin-bottom: 16px;
+}
+.form-textarea {
+  width: 100%;
+  height: 120px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  outline: transparent;
+  padding: 8px 16px;
+  resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-textarea:focus {
+  border-color: #4d5ae5;
 }
