--- a/css/styles.css
+++ b/css/styles.css
@@ -690,6 +690,10 @@ img {
   top: 50%;
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  fill: #2e2f42;
+}
+.form-input:focus + .icon-form {
+  fill: #4d5ae5;
 }
 .form-comment {
   margin-bottom: 16px;
