--- a/css/styles.css
+++ b/css/styles.css
@@ -738,8 +738,32 @@ img {
   justify-content: center;
   fill: transparent;
 }
-.input-checkbox:checked .label-span {
+.input-checkbox:checked + .label-checkbox .label-span {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
+}
+.policy-link {
+  color: #4d5ae5;
+}
+.button-modal {
+  display: block;
+  min-width: 169px;
+  height: 56px;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  cursor: pointer;
+  background-color: #4d5ae5;
+  border: none;
+  border-radius: 4px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.button-modal:hover,
+.button-modal:focus,
+.button-modal:active {
+  background-color: #404bbf;
 }
