--- a/css/styles.css
+++ b/css/styles.css
@@ -767,3 +767,62 @@ img {
 .button-modal:active {
   background-color: #404bbf;
 }
+.subscribe-paragraph {
+  margin-bottom: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  font-size: 16px;
+  color: #ffffff;
+}
+.footer-form {
+  display: flex;
+}
+.label-footer {
+  gap: 24px;
+}
+.input-footer {
+  width: 264px;
+  height: 40px;
+  border: 1px solid #ffffff;
+  background-color: transparent;
+  font-size: 12px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  padding-left: 16px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  color: #ffffff;
+}
+.input-footer::placeholder {
+  color: #ffffff;
+}
+.bttn-footer {
+  min-width: 165px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  font-weight: 500;
+  color: #ffffff;
+  cursor: pointer;
+  background-color: #4d5ae5;
+  border: none;
+  border-radius: 4px;
+  margin-left: 24px;
+}
+.icon-bttn {
+  fill: #ffffff;
+  margin-left: 16px;
+}
+.subsribe-container {
+  margin-left: 80px;
+}
+.bttn-footer:hover,
+.bttn-footer:focus,
+.bttn-footer:active {
+  background-color: #404bbf;
