--- a/css/styles.css
+++ b/css/styles.css
@@ -777,10 +777,9 @@ img {
 }
 .footer-form {
   display: flex;
+  gap: 24px
 }
-.label-footer {
-  gap: 24px;
-}
+
 .input-footer {
   width: 264px;
   height: 40px;
